@@ -112,6 +112,11 @@ only when PCRE2_NO_START_OPTIMIZE was *not* set:
 16. The "offset" modifier in pcre2test was not being ignored (as documented)
 when the POSIX API was in use.
 
+17. Added --enable-fuzz-support to "configure", causing an non-installed
+    library containing a test function that can be called by fuzzers to be 
+    compiled. A non-installed  binary to run the test function locally, called 
+    pcre2fuzzcheck is also compiled.
+
 
 Version 10.22 29-July-2016
 --------------------------
